@@ -1,4 +1,5 @@
 {{$NEXT}}
+- Allow any component type, not just Model, View and Controller
 
 1.001     2012-03-30 13:22:04 Europe/London
 - documentation fix, RT 76161
